# gsvm

gsvm/: .gitignore  AUTHORS  Makefile.am  configure.ac  gsvm.spec.in
gsvm/src/: configuration.cc  configuration.h  gsvm.cc  gsvm.h  launcher.cc  launcher.h
gsvm/src/data/: dataset.cc  dataset.h  solver_factory.cc  solver_factory.h
gsvm/src/feature/: feature.cc  feature.h
gsvm/src/io/: data.cc  data.h  dataset.cc  dataset.h
gsvm/src/logging/: log.cc  log.h
gsvm/src/math/: average.h  dense.cc  dense.h  matrix.cc  matrix.h  matrix_dense.cc  matrix_dense.h  matrix_sparse.cc  matrix_sparse.h  numeric.cc  numeric.h  random.cc  random.h  sparse.cc  sparse.h
gsvm/src/model/: selection.cc  selection.h
gsvm/src/svm/: bias.h  cache.h  classify.h  classify_pairwise.h  classify_universal.h  cv.h  generator.cc  generator.h  kernel.cc  kernel.h  pairwise_solver.h  params.cc  params.h  solver.h  solver_common.h  solver_pairwise.h  solver_universal.h  stop.cc  stop.h  strategy.h  universal_solver.h  validation.h  violation.h
gsvm/src/time/: timer.cc  timer.h
gsvm/tests/: test.cc
gsvm/tests/data/: dataset_factory_test.cc
gsvm/tests/logging/: fake_log.cc
gsvm/tests/math/: dataset_factory_test.cc  math_asserts.h  matrix_operations_test.cc  matrix_utils.h  sparse_matrix_test.cc
gsvm/tests/svm/: classification_test.cc
gsvm/tools/: autoclean  makedist  makefast
