bin_PROGRAMS = gsvm
gsvm_SOURCES = \
		src/gsvm.cc \
		src/configuration.cc \
		src/launcher.cc \
		src/math/numeric.cc \
		src/math/matrix.cc \
		src/math/matrix_dense.cc \
		src/math/matrix_sparse.cc \
		src/math/random.cc \
		src/svm/kernel.cc \
		src/svm/stop.cc \
		src/svm/generator.cc \
		src/svm/params.cc \
		src/model/selection.cc \
		src/feature/feature.cc \
		src/io/data.cc \
		src/time/timer.cc \
		src/logging/log.cc
